Add Google site verification meta tag

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Beam Earn - Earn Money Daily</title>
-    
+    <meta name="google-site-verification" content="Re_nlOpVbIe3AaJ9N3f9Fl-mC6yADbPzzcabqx7WZEo" />
     <!-- PWA Manifest -->
     <link rel="manifest" href="manifest.json">
     
